# Velin

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/velin-app/: Cargo.toml
crates/velin-app/packaging/linux/: velin.desktop
crates/velin-app/src/: app.rs  audio.rs  capture.rs  discovery.rs  main.rs  security.rs  settings.rs  transport.rs  ui.rs
crates/velin-app/wix/: License.rtf  main.wxs
crates/velin-proto/: Cargo.toml
crates/velin-proto/src/: lib.rs
scripts/: dist-linux.sh  dist-windows.ps1
