[workspace]
members = [
    "crates/velin-app",
    "crates/velin-proto",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.15.1"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "signal", "time", "io-util", "sync"] }
