[workspace]
members = [
    "crates/velin-app",
    "crates/velin-proto",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
cpal = "0.17"
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.15.1"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "signal", "time", "io-util", "sync"] }
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_System_Com"] }
