[workspace]
members = [
    "crates/velin-app",
    "crates/velin-proto",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.1-beta.1"

[workspace.dependencies]
anyhow = "1.0"
chacha20poly1305 = "0.10"
cpal = "0.17"
getrandom = "0.3"
hex = "0.4"
hkdf = "0.12"
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slint = "1.15.1"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "signal", "time", "io-util", "sync"] }
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_System_Com"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
