[package]
name = "velin-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cpal.workspace = true
local-ip-address.workspace = true
serde.workspace = true
serde_json.workspace = true
slint.workspace = true
tokio.workspace = true
velin-proto = { path = "../velin-proto" }
