[package]
name = "velin-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
cpal.workspace = true
getrandom.workspace = true
hex.workspace = true
hkdf.workspace = true
local-ip-address.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slint.workspace = true
tokio.workspace = true
velin-proto = { path = "../velin-proto" }
x25519-dalek.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
