[package]
name = "velin-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["p-stanchev"]
description = "LAN audio routing beta for Windows and Linux"
homepage = "https://github.com/p-stanchev/velin"
repository = "https://github.com/p-stanchev/velin"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
cpal.workspace = true
getrandom.workspace = true
hex.workspace = true
hkdf.workspace = true
local-ip-address.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slint.workspace = true
tokio.workspace = true
velin-proto = { path = "../velin-proto" }
x25519-dalek.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[package.metadata.deb]
depends = "$auto, pulseaudio-utils, alsa-utils"
section = "sound"
priority = "optional"
assets = [
    ["../../README.md", "usr/share/doc/velin-app/README.md", "644"],
    ["../../LICENSE", "usr/share/doc/velin-app/LICENSE", "644"],
    ["../../assets/logo.svg", "usr/share/icons/hicolor/scalable/apps/velin.svg", "644"],
    ["packaging/linux/velin.desktop", "usr/share/applications/velin.desktop", "644"],
]
